<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.request.RequestUpdateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fmRequestEditLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmRequestEditError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <Spinner
                android:id="@+id/fmRequestEditName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="Type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fmRequestEditDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmRequestEditTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_time"
                android:inputType="datetime"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmRequestEditPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_price"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmRequestEditAmount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_amount"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmRequestEditContent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmRequestEditId"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"/>

            <Button
                android:id="@+id/fmRequestEditButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_edit"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>