<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resident.ResidentRegisterConfirmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fmResidentRegisterConfirmNameLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:text="@string/label_name"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmNameLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmDestinationLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="144dp"
            android:text="@string/label_destination"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmName"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmDestinationLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmDescriptionLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="204dp"
            android:text="@string/label_description"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmDestination"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmDescriptionLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmStartDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:text="@string/label_start_date"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmName" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmName"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmName"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmStartDateLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmOwnerLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/label_type"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmStartDateLabel"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmStartDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmStartDate" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmStartDate"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmStartDate"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmOwnerLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmQualityLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_quality"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmOwnerLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmOwnerLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmOwner" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmQuality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmOwner"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmOwner"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmQualityLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmVehicleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/label_vehicle"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmQualityLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmQualityLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmQuality" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmQuality"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmQuality"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmVehicleLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmAdviceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_advice"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmVehicleLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmVehicleLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmVehicle" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmAdvice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmVehicle"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmVehicle"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmAdviceLabel" />

        <Button
            android:id="@+id/fmResidentRegisterConfirmButtonCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            android:background="@color/green"
            android:text="@string/label_cancel"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmOwner" />

        <Button
            android:id="@+id/fmResidentRegisterConfirmButtonConfirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/green"
            android:text="@string/label_confirm"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/fmResidentRegisterConfirmButtonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/fmResidentRegisterConfirmButtonCancel"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmButtonCancel"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/green"
            android:padding="15dp"
            android:text="@string/label_confirmation"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>