<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resident.ResidentDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/fmResidentDetailBottomAppBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="@+id/fmResidentDetailName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailName"
            app:menu="@menu/menu_in_detail" />

        <TextView
            android:id="@+id/fmResidentDetailName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/fmResidentDetailDestination"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fmResidentDetailDestinationLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailBottomAppBar" />

        <TextView
            android:id="@+id/fmResidentDetailDestinationLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_destination"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/fmResidentDetailRequestList"
            app:layout_constraintEnd_toStartOf="@+id/fmResidentDetailDestination"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailBottomAppBar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/fmResidentDetailDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailDestination"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailDestination"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailDescriptionLabel" />

        <TextView
            android:id="@+id/fmResidentDetailDescriptionLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_description"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailDestinationLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailDestinationLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailDestination"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fmResidentDetailStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailDescription"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailDescription"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailStartDateLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fmResidentDetailStartDateLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_start_date"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailDescriptionLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailDescriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailDescription"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fmResidentDetailOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailStartDate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailStartDate"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailOwnerLabel" />

        <TextView
            android:id="@+id/fmResidentDetailQuality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailOwner"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailOwner"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailQualityLabel" />

        <TextView
            android:id="@+id/fmResidentDetailVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailQuality"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailQuality"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailVehicleLabel" />

        <TextView
            android:id="@+id/fmResidentDetailAdvice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailVehicle"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailVehicle"
            app:layout_constraintTop_toTopOf="@+id/fmResidentDetailAdviceLabel" />

        <TextView
            android:id="@+id/fmResidentDetailOwnerLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_type"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailStartDateLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailStartDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailStartDate" />

        <TextView
            android:id="@+id/fmResidentDetailQualityLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_quality"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailOwnerLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailOwnerLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailOwner" />

        <TextView
            android:id="@+id/fmResidentDetailVehicleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_vehicle"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailQualityLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailQualityLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailQuality" />

        <TextView
            android:id="@+id/fmResidentDetailAdviceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_advice"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailVehicleLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailVehicleLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailVehicle" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fmResidentDetailRequestList"
            android:name="vn.edu.greenwich.cw_1_sample.ui.request.list.RequestListFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailRequestButton"
            app:layout_constraintVertical_bias="0.0"
            tools:layout="@layout/fragment_request_list" />

        <Button
            android:id="@+id/fmResidentDetailRequestButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            android:text="@string/label_add_request"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentDetailOwner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentDetailOwnerLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentDetailOwnerLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>